# Perlov_ai

./: .env.example  .gitignore  .replit  README.md  SEO_QUICK_START.txt  notes_kb.json  pyproject.toml  replit.md  requirements.txt
app/: __init__.py  ai_service.py  models.py  notes_retriever.py  notes_vectorizer.py  rag_builder.py  rag_engine.py  rag_service.py  real_products.py  seed_data.py  vector_search.py
app/constants/: default_responses.py
app/data/: notes.index  notes_cache.json  notes_embeddings.json
app/routes/: adaptive.py  admin.py  articles.py  auth.py  bio_scent.py  climate.py  custom_perfume.py  dashboard.py  digital_twin.py  face_analyzer.py  google_auth.py  main.py  (+16 more)
attached_assets/: Pasted---1764955254963_1764955254964.txt  Pasted--Color-Palette-1-Core-Colors-B-1764862487332_1764862487332.txt  Pasted--Full-Stack-Senior-Developer--1764860688195_1764860688196.txt  Pasted--SEO-Back-End-Front-End-Sitemap-Indexing-API--176537725_1765377259393.txt  Pasted-BuildError-werkzeug-routing-exceptions-BuildError-Could_1765124953601.txt  Pasted-IntegrityError-sqlalchemy-exc-IntegrityError-sqlite3-In_1767887526301.txt  Pasted-OperationalError-sqlalchemy-exc-OperationalError-sqlite_1765382491806.txt  Pasted-OperationalError-sqlalchemy-exc-OperationalError-sqlite_1765382558487.txt  Pasted-Skin-Chemistry-Match--1764947374710_1764947374711.txt
reports/: ARTICLE_GENERATION_SYSTEM_REPORT.md  ENGAGEMENT_SYSTEM_REPORT.md  PERLOV_Comprehensive_Report_ar.md  PERLOV_Comprehensive_Report_en.md  README.md  SCENT_PERSONALITY_ENHANCEMENT.md  SEO_IMPLEMENTATION_GUIDE.md
(+53 files in other folders)
