[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.3.0",
    "faiss-cpu>=1.13.1",
    "flask>=3.1.2",
    "flask-login>=0.6.3",
    "flask-mail>=0.10.0",
    "flask-sqlalchemy>=3.1.1",
    "oauthlib>=3.3.1",
    "openai>=2.8.1",
    "requests>=2.32.5",
    "werkzeug>=3.1.4",
]
